--- a/.pylintrc
+++ b/.pylintrc
@@ -8,6 +8,7 @@ disable=
       C0209, # Consider-using-f-string
       E0015, # Unrecognized-option
       C0321, # Multiple-statements
+      W0719, # Broad-exception-raised
 
 
 # Analyse import fallback blocks. This can be used to support both Python 2 and
